# kyrlat

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: test.yml
src/kyrlat/: __init__.py  romanize.py
tests/: test_romanize.py
