# SPDX-FileCopyrightText: 2021 Tuomas Siipola
# SPDX-License-Identifier: CC0-1.0

[metadata]
name = kyrlat
version = 0.0.1
author = Tuomas Siipola
author_email = tuomas@zpl.fi
description = Romanization of Cyrillic script according to SFS 4900
long_description = file: README.md
long_description_content_type = text/markdown
keywords = transliteration, romanization, latinization, cyrillic, finnish
url = https://github.com/siiptuo/kyrlat
project_urls =
    Bug Tracker = https://github.com/siiptuo/kyrlat/issues
license_files = LICENSES/CC0-1.0.txt, LICENSES/MIT.txt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Natural Language :: Bulgarian
    Natural Language :: Russian
    Natural Language :: Ukrainian
    Natural Language :: Finnish
    Natural Language :: Macedonian
    Intended Audience :: Developers
    Topic :: Text Processing

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
